fixing horizontal scrollbar issue - desktop version

--- a/desktop.css
+++ b/desktop.css
@@ -2,11 +2,10 @@
   body {
     width: 100vw;
     height: 100vh;
+    max-width: 100%;
   }
 
   .container {
-    width: 100%;
-    max-height: 100%;
     padding-left: 0;
   }
 
@@ -18,17 +17,18 @@
   }
 
   .img-container {
-    margin-left: 77px;
+    width: 539.22px;
+    margin: 77px;
   }
 
   .img {
-    max-width: 539.22px;
-    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   .text-container {
-    /* width: 586px; */
-    width: 50%;
     margin-left: 118.58px;
     padding-right: 119px;
   }
